--- a/Dockerfile.windows
+++ b/Dockerfile.windows
@@ -1,20 +1,20 @@
-FROM ubuntu:20.04
+FROM ubuntu:22.04
 
 ARG THREADS=1
-ARG QT_VERSION=v5.15.14-lts-lgpl
+ARG QT_VERSION=v6.8.2
 ENV SOURCE_DATE_EPOCH=1397818193
 
 RUN apt update && \
     DEBIAN_FRONTEND=noninteractive apt install -y build-essential cmake g++-mingw-w64 gettext git libtool pkg-config \
-    python && \
+    python2-minimal && \
     rm -rf /var/lib/apt/lists/*
 
 RUN update-alternatives --set x86_64-w64-mingw32-g++ $(which x86_64-w64-mingw32-g++-posix) && \
     update-alternatives --set x86_64-w64-mingw32-gcc $(which x86_64-w64-mingw32-gcc-posix)
 
-RUN git clone -b v0.18.2.0 --depth 1 https://github.com/monero-project/monero && \
+RUN git clone -b v0.18.3.4 --depth 1 https://github.com/monero-project/monero && \
     cd monero && \
-    git reset --hard 99be9a044f3854f339548e2d99c539c18d7b1b01 && \
+    git reset --hard b089f9ee69924882c5d14dd1a6991deb05d9d1cd && \
     cp -a contrib/depends / && \
     cd .. && \
     rm -rf monero
@@ -25,37 +25,47 @@ RUN git clone git://code.qt.io/qt/qt5.git -b ${QT_VERSION} --depth 1 && \
     cd qt5 && \
     git clone git://code.qt.io/qt/qtbase.git -b ${QT_VERSION} --depth 1 && \
     git clone git://code.qt.io/qt/qtdeclarative.git -b ${QT_VERSION} --depth 1 && \
-    git clone git://code.qt.io/qt/qtgraphicaleffects.git -b ${QT_VERSION} --depth 1 && \
+    git clone git://code.qt.io/qt/qt5compat.git -b ${QT_VERSION} --depth 1 && \
     git clone git://code.qt.io/qt/qtimageformats.git -b ${QT_VERSION} --depth 1 && \
     git clone git://code.qt.io/qt/qtmultimedia.git -b ${QT_VERSION} --depth 1 && \
-    git clone git://code.qt.io/qt/qtquickcontrols.git -b ${QT_VERSION} --depth 1 && \
-    git clone git://code.qt.io/qt/qtquickcontrols2.git -b ${QT_VERSION} --depth 1 && \
+    git clone git://code.qt.io/qt/qtquickeffectmaker.git -b ${QT_VERSION} --depth 1 && \
+    git clone git://code.qt.io/qt/qtquicktimeline.git -b ${QT_VERSION} --depth 1 && \
+    git clone git://code.qt.io/qt/qtshadertools.git -b ${QT_VERSION} --depth 1 && \
     git clone git://code.qt.io/qt/qtsvg.git -b ${QT_VERSION} --depth 1 && \
     git clone git://code.qt.io/qt/qttools.git -b ${QT_VERSION} --depth 1 && \
-    git clone git://code.qt.io/qt/qttranslations.git -b ${QT_VERSION} --depth 1 && \
-    git clone git://code.qt.io/qt/qtxmlpatterns.git -b ${QT_VERSION} --depth 1 && \
+    git clone git://code.qt.io/qt/qttranslations.git -b ${QT_VERSION} --depth 1
+
+RUN cp -r qt5 qt5_host && cd qt5_host && \
+    ./configure -developer-build -nomake tests -nomake examples \
+    -no-feature-assistant -no-opengl --prefix=/usr && \
+    cmake --build . --target host_tools -j$THREADS && \
+    cmake --install .
+
+RUN cd qt5 && \
     ./configure --prefix=/depends/x86_64-w64-mingw32 -xplatform win32-g++ \
     -device-option CROSS_COMPILE=/usr/bin/x86_64-w64-mingw32- \
-    -I $(pwd)/qtbase/src/3rdparty/angle/include \
-    -opensource -confirm-license -release -static -static-runtime -opengl dynamic -no-angle \
+    -opensource -confirm-license -release -static -static-runtime -no-opengl \
     -no-avx -no-openssl -no-sql-sqlite \
     -no-feature-qml-worker-script -no-openssl -no-sql-sqlite \
-    -qt-freetype -qt-harfbuzz -qt-libjpeg -qt-libpng -qt-pcre -qt-zlib \
-    -skip gamepad -skip location -skip qt3d -skip qtactiveqt -skip qtandroidextras \
+    -qt-freetype -qt-harfbuzz -qt-libjpeg -qt-libpng -qt-pcre -qt-zlib -no-dbus \
+    -skip gamepad -skip location -skip qt3d -skip qtactiveqt \
     -skip qtcanvas3d -skip qtcharts -skip qtconnectivity -skip qtdatavis3d -skip qtdoc \
     -skip qtgamepad -skip qtlocation -skip qtmacextras -skip qtnetworkauth -skip qtpurchasing \
     -skip qtscript -skip qtscxml -skip qtsensors -skip qtserialbus -skip qtserialport \
-    -skip qtspeech -skip qttools -skip qtvirtualkeyboard -skip qtwayland -skip qtwebchannel \
-    -skip qtwebengine -skip qtwebsockets -skip qtwebview -skip qtwinextras -skip qtx11extras \
+    -skip qtspeech -skip qtvirtualkeyboard -skip qtwayland -skip qtwebchannel \
+    -skip qtwebengine -skip qtwebsockets -skip qtwebview \
     -skip serialbus -skip webengine \
-    -nomake examples -nomake tests -nomake tools && \
-    make -j$THREADS && \
-    make -j$THREADS install && \
-    cd qttools/src/linguist/lrelease && \
-    ../../../../qtbase/bin/qmake && \
-    make -j$THREADS && \
-    make -j$THREADS install && \
-    cd ../../../.. && \
+    -skip qtcoap -skip qtfeedback -skip qtgraphs -skip qtgrpc -skip qthttpserver -skip qtlanguageserver -skip qtlottie -skip qtmqtt -skip qtopcua -skip qtpim -skip qtpositioning -skip qtqa \
+    -skip qtremoteobjects -skip qtrepotools -skip qtsystems -skip qtwebglplugin \
+    -nomake examples -nomake tests -skip qtquick3d -skip qtquick3dphysics -skip qttranslations -skip qtxmlpatterns \
+    -no-feature-designer -no-feature-distancefieldgenerator -no-feature-pixeltool -no-feature-qtattributionsscanner \
+    -no-feature-qtdiag -no-feature-qtplugininfo -no-feature-androiddeployqt -no-linuxfb \
+    -skip qtshadertools -skip qtmultimedia -skip qtquickeffectmaker \
+    -qt-host-path /qt5_host CMAKE_TOOLCHAIN_FILE=/depends/x86_64-w64-mingw32/share/toolchain.cmake
+
+RUN qt5 && \
+    cmake --build . -j$THREADS && \
+    cmake --install . && \
     rm -rf $(pwd)
 
 RUN git clone -b libgpg-error-1.38 --depth 1 git://git.gnupg.org/libgpg-error.git && \
