--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -79,7 +79,7 @@ jobs:
       run: source /tmp/venv/bin/activate && python3 monero-gui/.github/qt_helper.py mac_x64 desktop 6.8.2 clang_64 eb909ac47aee46d9d6bec3bb840d593b9f0903ce86f2c07c5f77cd4cba63eee8
       working-directory: ../
     - name: tmp
-      run: find / -name Qt6Config.cmake
+      run: find ./ -name Qt6Config.cmake
     - name: build
       run: |
         mkdir build && cd build
