--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -78,8 +78,12 @@ jobs:
     - name: download qt
       run: source /tmp/venv/bin/activate && python3 monero-gui/.github/qt_helper.py mac_x64 desktop 6.8.2 clang_64 eb909ac47aee46d9d6bec3bb840d593b9f0903ce86f2c07c5f77cd4cba63eee8
       working-directory: ../
+    - name: xxx
+      run: pwd
     - name: tmp
-      run: find ./ -name Qt6Config.cmake
+      run: find /Users/runner/work/monero-gui -name Qt6Config.cmake
+    - name: tmp2
+      run: find /Users/runner/work/monero-gui -name qt6-config.cmake.cmake
     - name: build
       run: |
         mkdir build && cd build
